# Locksmith

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.md  README.md  app  com.github.christophernugent.locksmith.json  meson.build
data/: com.github.christophernugent.locksmith.appdata.xml  com.github.christophernugent.locksmith.appdata.xml.in  com.github.christophernugent.locksmith.desktop  com.github.christophernugent.locksmith.desktop.in  com.github.christophernugent.locksmith.gresource.xml  com.github.christophernugent.locksmith.gschema.xml  meson.build  words_alpha.txt
data/css/: style.css
debian/: changelog  control  copyright  rules
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.christophernugent.locksmith.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+156 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  (+184 more)
src/: Application.vala  CapitalizationMode.vala  Main.vala  PasswordGenerator.vala  Window.vala  meson.build
src/configs/: Constants.vala  Settings.vala
src/controllers/: AppController.vala
src/passwords/: CapitalizationHelper.vala  CapitalizationMode.vala  Dictionary.vala  PasswordGenerator.vala  RandomStringGenerator.vala
src/views/: AppView.vala  CharacterPasswordView.vala  PasswordView.vala  WordPasswordView.vala
src/widgets/: HeaderBar.vala
submodules/: meson.build
tests/: assert.vala  test.vala
