sources += files(
    'configs/Constants.vala',
    'configs/Settings.vala',

    'controllers/AppController.vala',

    'views/AppView.vala',
    'views/CharacterPasswordView.vala',
    'views/WordPasswordView.vala',
    'views/PasswordView.vala',

    'widgets/HeaderBar.vala',

    'passwords/PasswordGenerator.vala',
    'passwords/CapitalizationMode.vala',
    'passwords/Dictionary.vala',
    'passwords/RandomStringGenerator.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala',
)
